Fix Collapse links in Option-set #1684 (#1697)
* Fix Collapse links in Option-set #1684

* Fix Collapse links in Option-set #1684

* Fix Collapse links in Option-set #1684

- also removed unnecessary 10px padding for colapsed option set

* Fix Collapse links in Option-set #1684

- fix isContainerVisible()
- rename showContainer -> setContainerVisible

--- a/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
@@ -34,10 +34,6 @@
         }
       }
 
-      &.collapsed {
-        padding-bottom: 10px;
-      }
-
       .form-option-set-option-view.invalid {
         > .help-text {
           padding-left: 10px;
@@ -234,9 +230,6 @@
 
     &.single-selection {
       .form-option-set-occurrences-container {
-        &.empty {
-          display: none;
-        }
 
         .form-option-set-option-view {
           margin: 0;
